@@ -14,6 +14,9 @@ Changed
     Use more consistent card theming & add a light gray background
     Bump composer libaries to fix (#101)
 
+Fixed
+    Breadcrumb navigation (#103)
+
 0.3.0
 
 Fixed
